syntax = "proto3";

package proto;

import "google/protobuf/wrappers.proto";

service Server {
  rpc Info(InfoReq) returns (InfoRes) {}
}

message InfoReq {

}

message InfoRes {
  string public_key = 1;
  google.protobuf.StringValue host = 2;
  int32 port = 3;
  string host_vpn_ip = 4;
  bool metadata_enabled = 5;
  bool is_admin = 6;
  string allowed_ips = 7;
  bool dns_enabled = 8;
  string dns_address = 9;
  int32 mtu = 10;
}
